<resources>
    <string name="app_name">tictactoe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="tic_tac_toe">TIC-TAC-TOE</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>